# boa-exchange-rate-api

./: .gitignore  BULK_OPERATIONS_GUIDE.md  DATABASE_STORAGE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  HETZNER_DEPLOYMENT.md  LOCAL_TESTING.md  MULTI_TENANT_SETUP.md  PRIORITY_CURRENCIES.md  PRODUCTION_DEPLOYMENT.md  QB_MULTICURRENCY_INTEGRATION.md  QUICKBOOKS_APP_SETUP.md  QUICKBOOKS_SETUP.md  README.md  SECURITY.md  deploy-production.sh  docker-compose.yml  oauth_callback_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_local.py  setup_admin.py  setup_quickbooks.py  start_server.py  test_api_simple.py  test_config.py  test_qb_integration.py  test_user_info.py
.github/: copilot-instructions.md
config/: .env.example  .env.production  settings.py
scripts/: migrate_approval_workflow.py
src/: __init__.py  main.py
src/api/: __init__.py  admin_routes.py  admin_schemas.py  company_routes.py  oauth_routes.py  rates_routes.py  registration_routes.py  routes.py  schemas.py
src/boa_scraper/: __init__.py  models.py  scraper.py
src/database/: __init__.py  admin_models.py  company_service.py  engine.py  init_db.py  models.py  repository.py
src/quickbooks/: __init__.py  client.py  oauth_client.py  sync.py
src/utils/: admin_auth.py  auth.py  encryption.py  logger.py  scheduler.py
static/: admin.html  rates.html  register.html
static/css/: admin.css
static/js/: admin.js
tests/: test_api.py  test_quickbooks.py  test_scraper.py
